Solve a bug with suffle while a tile is selected.

BUG: 305036
FIXED-IN: 4.9.1

svn path=/branches/KDE/4.9/kdegames/kmahjongg/; revision=1313425

(cherry picked from commit 61dbef0e9a15cb2305d29b0654e2eabfeb820111)